adicionado play no mobile

--- a/index.html
+++ b/index.html
@@ -116,6 +116,8 @@
     // }
     
     tocar.addEventListener('mouseenter', playmusica);
+
+    $('body').bind('touchstart', playmusica);
     // tocar.addEventListener('mouseleave', stopmusica);
   </script>
 </body>
