--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     
     tocar.addEventListener('mouseenter', playmusica);
 
-    $('body').bind('touchstart', playmusica);
+    $('.cordas').bind('touchstart', playmusica);
     // tocar.addEventListener('mouseleave', stopmusica);
   </script>
 </body>
