ajuste nome da funcao playmusic()

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     var tocar = document.querySelector('.cordas');
     console.log(tocar);
 
-    function playmusica() {
+    function playmusic() {
       console.log('teste');
       Am.play();      
     }
@@ -115,9 +115,9 @@
     //   Am.pause();
     // }
     
-    tocar.addEventListener('mouseenter', playmusica);
+    tocar.addEventListener('mouseenter', playmusic);
 
-    $('.cordas').bind('touchstart', playmusica);
+    $('.cordas').bind('touchstart', playmusic);
     // tocar.addEventListener('mouseleave', stopmusica);
   </script>
 </body>
