ajuste tempo de inicio do audio

--- a/index.html
+++ b/index.html
@@ -108,7 +108,9 @@
 
     function playmusic() {
       console.log('teste');
+      Am.currentTime = 1.5;
       Am.play();      
+      
     }
     // function stopmusica() {
     //   console.log('entrou aqui');
